scoped view working for testing